[gd_scene load_steps=29 format=2]

[ext_resource path="res://Fotos/BackButton.png" type="Texture" id=1]
[ext_resource path="res://UI/AdminArea/FileDialog.gd" type="Script" id=2]
[ext_resource path="res://SceneLoader/SceneLoader.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/buttonFontCards.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fotos/SmallerConfirmButtonDisabled.png" type="Texture" id=5]
[ext_resource path="res://Fonts/buttonFontCardsSmaller.tres" type="DynamicFont" id=6]
[ext_resource path="res://Cards/el/Photos/enterButton_pressed.png" type="Texture" id=7]
[ext_resource path="res://Fotos/EnterButton.png" type="Texture" id=8]
[ext_resource path="res://UI/AdminArea/CardDetails.gd" type="Script" id=9]
[ext_resource path="res://UI/AdminArea/BackButton.gd" type="Script" id=10]
[ext_resource path="res://UI/AdminArea/SelectImage.gd" type="Script" id=11]
[ext_resource path="res://Assets/Fonts/Roboto_greek/Roboto-Bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Fotos/image_gallery.png" type="Texture" id=13]
[ext_resource path="res://Fotos/dropdown_menu_arrow.png" type="Texture" id=14]
[ext_resource path="res://UI/AdminArea/CheckInput.gd" type="Script" id=15]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 37
outline_size = 1
outline_color = Color( 0.901961, 0.435294, 0.12549, 1 )
extra_spacing_char = 2
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.901961, 0.435294, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.945098, 0.631373, 0.427451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.901961, 0.435294, 0.12549, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 30
outline_color = Color( 0.901961, 0.435294, 0.12549, 1 )
extra_spacing_char = 2
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
outline_color = Color( 0.901961, 0.435294, 0.12549, 1 )
extra_spacing_char = 2
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.780392, 0.737255, 0.737255, 1 )
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=13]
size = 30
extra_spacing_char = 2
font_data = SubResource( 12 )

[node name="CardDetails" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -355.885, -61.6462 )
script = ExtResource( 9 )
__meta__ = {
"_edit_horizontal_guides_": [ 585.95 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ -6.25492 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = -0.00162137
anchor_right = 0.998379
anchor_bottom = 1.0
margin_top = 1.02008
margin_bottom = 1.02008
color = Color( 0.964706, 0.921569, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = -7.09221
margin_top = -5.67377
margin_right = 92.9078
margin_bottom = 94.3262
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
previousScene = "res://UI/AdminArea/CardManager.tscn"

[node name="SceneLoader" parent="." instance=ExtResource( 3 )]
next_scene_path = "res://UI/InitialMenuCris/InitialMenu.tscn"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -437.0
margin_top = -244.5
margin_right = 493.0
margin_bottom = 244.5
popup_exclusive = true
window_title = "Choose an Image"
resizable = true
dialog_text = "Choose an image to your new challenge"
dialog_hide_on_ok = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users"
current_path = "/Users/"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 57.0
margin_right = 1020.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Creating a new challenge"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -160.0
margin_right = 485.0
margin_bottom = 194.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="GridContainer"]
margin_top = 8.0
margin_right = 249.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Map zone"

[node name="MapZones" type="OptionButton" parent="GridContainer"]
margin_left = 253.0
margin_right = 948.0
margin_bottom = 52.0
custom_icons/arrow = ExtResource( 14 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapZonesAsteric" type="Label" parent="GridContainer"]
margin_left = 952.0
margin_top = 7.0
margin_right = 970.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="Title" type="Label" parent="GridContainer"]
margin_top = 57.0
margin_right = 249.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Title"

[node name="Title_input" type="LineEdit" parent="GridContainer"]
margin_left = 253.0
margin_top = 56.0
margin_right = 948.0
margin_bottom = 95.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 3
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 200
expand_to_text_length = true
caret_blink = true

[node name="TitleAsterisc" type="Label" parent="GridContainer"]
margin_left = 952.0
margin_top = 56.0
margin_right = 970.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="Description" type="Label" parent="GridContainer"]
margin_top = 111.0
margin_right = 249.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Description
(max.150 chars)"

[node name="Description_input" type="LineEdit" parent="GridContainer"]
margin_left = 253.0
margin_top = 99.0
margin_right = 948.0
margin_bottom = 199.0
rect_min_size = Vector2( 600, 100 )
size_flags_horizontal = 3
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 9 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
max_length = 130
clear_button_enabled = true
caret_blink = true

[node name="DescriptionAsterisc" type="Label" parent="GridContainer"]
margin_left = 952.0
margin_top = 130.0
margin_right = 970.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="Image" type="Label" parent="GridContainer"]
margin_top = 211.0
margin_right = 249.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Image (.png)"

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
margin_left = 253.0
margin_top = 203.0
margin_right = 948.0
margin_bottom = 255.0

[node name="Button" type="Button" parent="GridContainer/HBoxContainer2"]
margin_right = 155.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.09
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "select "
icon = ExtResource( 13 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
fileManager = NodePath("../../../FileDialog")

[node name="ImagePath" type="Label" parent="GridContainer/HBoxContainer2"]
margin_left = 159.0
margin_right = 695.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Image_input" type="LineEdit" parent="GridContainer"]
visible = false
margin_left = 176.0
margin_top = 146.0
margin_right = 776.0
margin_bottom = 184.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 10 )
max_length = 200
expand_to_text_length = true

[node name="ImageAsterisc" type="Label" parent="GridContainer"]
margin_left = 952.0
margin_top = 210.0
margin_right = 970.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="Score" type="Label" parent="GridContainer"]
margin_top = 260.0
margin_right = 249.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score"

[node name="Score_input" type="LineEdit" parent="GridContainer"]
margin_left = 253.0
margin_top = 259.0
margin_right = 948.0
margin_bottom = 298.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 3
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_length = 3
expand_to_text_length = true
caret_blink = true
script = ExtResource( 15 )

[node name="ScoreAsterisc" type="Label" parent="GridContainer"]
margin_left = 952.0
margin_top = 259.0
margin_right = 970.0
margin_bottom = 297.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="Skills" type="Label" parent="GridContainer"]
margin_top = 310.0
margin_right = 249.0
margin_bottom = 346.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Skill "

[node name="OptionButton" type="OptionButton" parent="GridContainer"]
margin_left = 253.0
margin_top = 302.0
margin_right = 948.0
margin_bottom = 354.0
custom_icons/arrow = ExtResource( 14 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="GridContainer" parent="GridContainer"]
visible = false
margin_left = 845.0
margin_top = 230.0
margin_right = 1479.0
margin_bottom = 274.0
rect_min_size = Vector2( 600, 0 )
columns = 3

[node name="Button1" type="Button" parent="GridContainer/HBoxContainer"]
margin_right = 199.0
margin_bottom = 20.0
text = "Calculus and Problem Solving"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 415.0
margin_bottom = 20.0
text = "Language"

[node name="Button3" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 419.0
margin_right = 634.0
margin_bottom = 20.0
text = "Memory and Attention to Detail"

[node name="Button4" type="Button" parent="GridContainer/HBoxContainer"]
margin_top = 24.0
margin_right = 199.0
margin_bottom = 44.0
text = "Spatial Orientation"

[node name="Button5" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 203.0
margin_top = 24.0
margin_right = 415.0
margin_bottom = 44.0
text = "Social and Emotional Wellbeing"

[node name="SkillAsterisc" type="Label" parent="GridContainer"]
margin_left = 952.0
margin_top = 309.0
margin_right = 970.0
margin_bottom = 347.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "*"

[node name="Asterisco_legenda" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -27.0
margin_right = 161.001
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.490196, 0.454902, 0.454902, 1 )
text = "* MANDATORY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
rect_pivot_offset = Vector2( -980.804, -584.622 )
size_flags_horizontal = 6
size_flags_vertical = 2
size_flags_stretch_ratio = 2.43
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="GridContainer/HBoxContainer2/Button" to="GridContainer/HBoxContainer2/Button" method="show_fileManager"]
[connection signal="text_changed" from="GridContainer/Score_input" to="GridContainer/Score_input" method="_on_Score_input_text_changed"]
[connection signal="pressed" from="TextureButton2" to="." method="submit"]
